<resources>
    <string name="app_name">QuickNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_title">Enter title</string>
    <string name="note">Note</string>
    <string name="folder">Folder</string>
    <string name="no_items_found_you_can_create_new_items_by_clicking_the_button">No items found. You can create new items by clicking the + button.</string>
    <string name="search">Search...</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="quicknotes">QuickNotes</string>
    <string name="your_pesronal_note_taking_assistant">Your pesronal note-taking assistant</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="font_size">Font Size</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="font">Font</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="this_app_is_developed_by">I am a developer who is passionate about creating useful tools for users. My goal is to develop applications that make life easier and more convenient. 💡\nThank you for choosing "QuickNotes"! Your feedback and suggestions are important to me so that I can improve my products. If you have any problems with the app, have any ideas or comments, please email me:</string>
    <string name="view_mode">View Mode</string>
    <string name="find">Find</string>
    <string name="replace">Replace</string>
    <string name="share">Share</string>
    <string name="move_file">Move File</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="create_item">Create Item</string>
    <string name="choose_item_type">Choose Item Type</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="search1">Search</string>
    <string name="what_to_replace">What to replace?</string>
    <string name="what_to_replace_it_with">What to replace it with?</string>
    <string name="replacing_the_text">Replacing the text</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="select_the_format_to_export">Select the format to export</string>
    <string name="share_a_note">Share a note</string>
    <string name="next">Next</string>
    <string name="select_item_type">Select Item Type</string>
    <string name="enter_title_dialog">Enter Title</string>
    <string name="confirm_delete_title">Confirm the deletion</string>
    <string name="confirm_delete_message">Are you sure you want to delete this item?</string>
    <string name="rename_folder">Rename a folder</string>
    <string name="enter_new_folder_name">Enter a new name for the folder:</string>
    <string name="folder_name_hint">New name</string>
    <string name="save">Save</string>
    <string name="select_folder">Select Folder</string>
    <string name="root_folder">"Root</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure you want to delete this note?</string>
    <string name="delete_note">Delete a note</string>
    <string name="undo">Undo</string>
    <string name="do_not_save">Cancel</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="confirm_save">You have unsaved changes. Do you want to save them?</string>
</resources>